VeraSandBox2016/src/objects/Systemic_Impact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select an account if the systemic impact relates to an account in any way, otherwise leave blank</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Systemic Impacts</relationshipLabel>
        <relationshipName>Systemic_Impacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Impact_Description__c</fullName>
        <label>Impact Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_Level__c</fullName>
        <label>Impact Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <displayFormat>SYI-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Thematic__c</fullName>
        <label>Thematic</label>
        <picklist>
            <picklistValues>
                <fullName>GINV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBGV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Systemic Impact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sys Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Systemic Impacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>